# Airplane-Flight-Optimizer

./: .gitignore  CMakeLists.txt  README.md
backend/: server.js
data/: airports.csv  routes.csv
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  MapView.jsx  index.css
include/: AStarOptimizer.h  Airport.h  DataLoader.h  DijkstraOptimizer.h  Graph.h  HaversineHelper.h  PathResult.h  RouteEdge.h  WeightCalculator.h
src/: AStarOptimizer.cpp  Airport.cpp  DataLoader.cpp  DijkstraOptimizer.cpp  Graph.cpp  HaversineHelper.cpp  PathResult.cpp  RouteEdge.cpp  WeightCalculator.cpp  main.cpp
